--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
       </head>  
       <body>  
       <!-- Put Python code inside the the <py-script> tag -->  
-        <py-script>print("Hello World!")</py-script>  
+        print("Hello World!")
       </body>  
     </html>  
