--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
       </head>  
       <body>  
       <!-- Put Python code inside the the <py-script> tag -->  
-        print("Hello World!")
+        print('Hello World!')
       </body>  
     </html>  
