--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Solar Filament Detector</title>
-    
-  </head>
-  <body>
-    <script src="https://gist.github.com/sanmoy1985/9ed73b692cd8f3fd19c897199c543a13.js"></script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Embed Solar Filament Detection App</title>
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
+</head>
+<body>
+    <iframe src="https://muffled-loose-fossa.anvil.app" title="Solar Filament Detection App"></iframe>
+</body>
 </html>
