--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     
   </head>
   <body>
-    <!-- Put Python code inside the <py-script> tag -->
+    <!-- Put Python code inside the <py-script> tag 
     <py-script>
       print("Hello World!")
     </py-script>
-    <p id="output"></p>
+    <p id="output"></p> -->
     <!-- Adding this script for console output -->
     <script>
       // Making sure PyScript is initialized and working
